    . Add test for ->highlight_node()
    . Add test for ->set_visible()
    . Add test for ->clickables()
    . Add test for getting/setting ->autodie()
    . Add test for getting/setting ->events()
    . Add 2-arg test for ->synchronize()
    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs
0.54 to be released
    . The tests can now run against other Firefox installations under
        firefox-versions/(v.v.v)/FirefoxPortable.exe
    + Bugfix: Tabs on FF4+ now only get closed once, preventing FF lockups

0.53 20110701
    ! Renamed ff-scrape.pl to scrape-ff.pl
    . scrape-ff.pl now supports attribute selection with CSS selectors
    + Bugfix: ->form_with_fields() ignored textarea and select fields

0.52 20110509
    . Remove traces of Firefox 4 being unsupported
    . Added license to API35.pm and API40.pm
    . Upgrade local test server to more current incarnation
    . Eliminate almost all tests that need an outside network connection
    . Document Firefox 4 bug
      L<https://bugzilla.mozilla.org/show_bug.cgi?id=649924>

0.51 20110502
    . Add pageshow event to the default set of monitored events.
      Pageshow fires when a page is loaded from the cache.
    + Firefox 4 is now supported in addition to Firefox 3.5+
      Firefox 4 support is not really tested outside of the module self-tests.
    + ->get() can now optionally not synchronize, like ->click(), suggested
      and coded by Dave Hansen

0.50 20110411
    . implement ->text() and ->content( format => 'text' )
    + autodie is now on by default
    . The screenshot example can now also use the current tab

0.49 20110403
    . Fix for RT #67195
      ->find_link_dom( text => 'foo' ) was (much) slower than it needed to be
      Fix and report by Dave Hansen

0.48 20110317
    . Implemented ->click_button() function plus tests
      Tests courtesy of WWW::Mechanize 1.66